--- a/app/javascript/packs/active_admin/active_admin.scss
+++ b/app/javascript/packs/active_admin/active_admin.scss
@@ -36,20 +36,26 @@
       }
     }
   }
-  td, .columns {
+  li.images {
+    > label {
+      display: block;
+    }
+  }
+  .post_images,
+  .container {
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
-    div.image_container {
-      text-align: center;
-      flex: 0 0 calc(20%);
-      padding: 10px;
-      border: 1px solid #999;
-      border-radius: 5px;
-      box-shadow: 0 0 2px 2px #eee;
-    }
-    img {
-      padding: 5px;
-    }
+  }
+  div.image {
+    text-align: center;
+    flex: 0 0 calc(20%);
+    padding: 10px;
+    border: 1px solid #999;
+    border-radius: 5px;
+    box-shadow: 0 0 2px 2px #eee;
+  }
+  img {
+    padding: 5px;
   }
 }
