view looks ok except images,images,images text

--- a/app/javascript/packs/active_admin/active_admin.scss
+++ b/app/javascript/packs/active_admin/active_admin.scss
@@ -41,8 +41,8 @@
       display: block;
     }
   }
-  .post_images,
-  .container {
+  .container,
+  td {
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
