Use ActiveStorage for Blog::Post images, featured_image (#145)
* add s3 config

* add s3 config

* uploads working in development activeadmin

* activeadmin view updates

* activeadmin edit and view working

* activeadmin image delete

* render post.featured_image in blog_posts#index and blog_posts#show

* add image_processing gem

* full and 300px images

* add CDN routes for ActiveStorage

* use cdn_image_url helper

* use cdn_image_url helper

* WIP on admin styling for images

* admin styling blog_posts#show

* admin styling blog_posts#edit

* multiple sizes and improved button styling

* multiple sizes and improved button styling in view

* styling on edit good, view bad

* view looks ok except images,images,images text

* wtf

* fix images,images,images bug

* rubocop

* tests

* feature spec for admin featured image

* run tests in random order

* feature spec for admin images

* rubocop

* change active_storage routes prefix

--- a/app/javascript/packs/active_admin/active_admin.scss
+++ b/app/javascript/packs/active_admin/active_admin.scss
@@ -19,3 +19,41 @@
 // For example, to change the default status-tag color:
 //
 //   .status_tag { background: #6090DB; }
+
+// custom styles for post#show image container
+.attributes_table.blog_post,
+.formtastic.blog_post {
+  a.default-button {
+    @include default-button;
+    margin: 5px;
+    &.danger-button {
+      background-image: linear-gradient(180deg, #f22, #f55);
+      color: white;
+      text-shadow: none;
+      border: 1px solid #f00;
+      &:hover {
+        background-image: linear-gradient(180deg, #f33, #f99);
+      }
+    }
+  }
+  li.images {
+    > label {
+      display: block;
+    }
+  }
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+  div.image {
+    text-align: center;
+    flex: 0 0 calc(20%);
+    padding: 10px;
+    border: 1px solid #999;
+    box-shadow: 0 0 2px 2px #eee;
+  }
+  img {
+    padding: 5px;
+  }
+}
