--- a/app/views/home/_work.html.erb
+++ b/app/views/home/_work.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-cover bg-no-repeat xs:bg-[center_top_1000rem] lg:bg-top pb-16 xl:px-16"
+<div class="bg-cover bg-no-repeat xs:bg-[center_top_1000rem] lg:bg-top pb-0 lg:pb-16 xl:px-16"
     style="background-image:url(<%= asset_pack_path("media/images/home/experience-figure.svg") %>)" id="work">
     <div class="bg-white w-5/6 md:w-11/12 2xl:w-full mx-auto py-16 lg:py-20 xl:py-24">
         <h2 class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
