--- a/app/views/home/_expertise.html.erb
+++ b/app/views/home/_expertise.html.erb
@@ -17,7 +17,7 @@
             </div>
             <div class="text-center">
                 <h3
-                    class="font-semibold  text-lg lg:text-xl text-primary dark:text-gray-300 primary-dark uppercase pt-8 group-hover:text-yellow">
+                    class="font-semibold text-lg lg:text-xl text-primary dark:text-grey-dark-10 primary-dark uppercase pt-8 group-hover:text-yellow">
                     Software Engineering</h3>
                 <p class="text-sm md:text-base text-grey dark:text-gray-100 pt-4 group-hover:text-white dark:group-hover:text-black">
                     Frontend and backend development using microservices.
@@ -36,7 +36,7 @@
             </div>
             <div class="text-center">
                 <h3
-                    class="font-semibold  text-lg lg:text-xl text-primary dark:text-gray-300 primary-dark uppercase pt-8 group-hover:text-yellow">
+                    class="font-semibold text-lg lg:text-xl text-primary dark:text-grey-dark-10 primary-dark uppercase pt-8 group-hover:text-yellow">
                     <span class="normal-case">iOS</span> Game Development</h3>
                 <p class="text-sm md:text-base text-grey dark:text-gray-100 pt-4 group-hover:text-white dark:group-hover:text-black">
                     2D arcade-style games built with SpriteKit.
@@ -55,7 +55,7 @@
             </div>
             <div class="text-center">
                 <h3
-                    class="font-semibold  text-lg lg:text-xl text-primary dark:text-gray-300 primary-dark uppercase pt-8 group-hover:text-yellow">
+                    class="font-semibold text-lg lg:text-xl text-primary dark:text-grey-dark-10 primary-dark uppercase pt-8 group-hover:text-yellow">
                     Film & Photography</h3>
                 <p class="text-sm md:text-base text-grey dark:text-gray-100 pt-4 group-hover:text-white dark:group-hover:text-black">
                     Product photography, advertisement spots, and short films.
