--- a/app/views/home/_work.html.erb
+++ b/app/views/home/_work.html.erb
@@ -1,9 +1,9 @@
-<div class="bg-cover bg-no-repeat xs:bg-[center_top_1000rem] lg:bg-top pb-0 lg:pb-16 xl:px-16"
+<div class="bg-cover bg-no-repeat xs:bg-[center_top_1000rem] lg:bg-top pb-0 lg:pb-16 xl:px-16 dark:bg-grey-dark-40"
     style="background-image:url(<%= asset_pack_path("media/images/home/experience-figure.svg") %>)" id="work">
-    <div class="bg-white w-5/6 md:w-11/12 2xl:w-full mx-auto py-16 lg:py-20 xl:py-24">
-        <h2 class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
+    <div class="bg-white dark:bg-grey-dark-40 w-5/6 md:w-11/12 2xl:w-full mx-auto py-16 lg:py-20 xl:py-24">
+        <h2 class="font-header font-semibold text-primary dark:text-primary-dark text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
             Work Experience</h2>
-        <h3 class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
+        <h3 class="font-header font-medium text-black dark:text-white text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
             San Francisco Based Technology Companies</h3>
 
         <div class="w-full lg:w-2/3 mx-auto flex flex-col mt-12 relative">
@@ -26,14 +26,14 @@
                             class="border-2 border-grey-40 rounded-full w-4 h-4 absolute left-8 top-1 bg-white hidden md:block"></span>
 
                         <div class="mt-1 flex">
-                            <i class='bx bxs-right-arrow text-primary hidden md:block'></i>
+                            <i class='bx bxs-right-arrow text-primary dark:text-primary-dark hidden md:block'></i>
                             <div class="md:pl-8 md:-mt-1">
-                                <span class="font-body font-bold text-grey-40 block">
+                                <span class="font-body font-bold text-grey-40 dark:text-grey-dark-90 block">
                                     Apr 2017 - <%= Time.now.strftime("%b %Y") %></span>
-                                <span class="font-header font-bold text-xl text-primary uppercase block pt-2">
+                                <span class="font-header font-bold text-xl text-primary dark:text-primary-dark uppercase block pt-2">
                                     Software Engineer</span>
                                 <div class="pt-2">
-                                    <span class="font-body text-black block">
+                                    <span class="font-body text-black dark:text-white block">
                                         Built and maintained Simulated Rides and Acceptance Testing platforms, ensuring
                                         Lyft can handle peak scale for the busiest moments.
                                     </span>
@@ -47,7 +47,7 @@
                 <div class="md:w-2/5">
                     <div class="flex justify-center md:justify-start">
                         <span class="flex-shrink-0">
-                            <%= image_pack_tag "home/logo-teespring.svg", class: "w-48 h-auto", alt: "company logo" %>
+                            <%= image_pack_tag "home/logo-teespring.svg", class: "w-48 h-auto dark:brightness-200", alt: "company logo" %>
                         </span>
                         <div class="relative w-full ml-6 hidden md:block">
                             <span class="h-0.5 bg-grey-70 absolute inset-x-0 top-1/2 transform -translate-y-1/2"></span>
@@ -60,16 +60,16 @@
                             class="border-2 border-grey-40 rounded-full w-4 h-4 absolute left-8 top-1 bg-white hidden md:block"></span>
 
                         <div class="mt-1 flex">
-                            <i class='bx bxs-right-arrow text-primary hidden md:block'></i>
+                            <i class='bx bxs-right-arrow text-primary dark:text-primary-dark hidden md:block'></i>
                             <div class="md:pl-8 md:-mt-1">
-                                <span class="font-body font-bold text-grey-40 block">
+                                <span class="font-body font-bold text-grey-40 dark:text-grey-dark-90 block">
                                     Sep 2015 - Mar 2017
                                 </span>
                                 <span
-                                    class="font-header font-bold text-xl text-primary uppercase block pt-2">Engineering
+                                    class="font-header font-bold text-xl text-primary dark:text-primary-dark uppercase block pt-2">Engineering
                                     Manager</span>
                                 <div class="pt-2">
-                                    <span class="font-body text-black block">
+                                    <span class="font-body text-black dark:text-white block">
                                         Architect of Teespring Storefronts product, widely used by online influencers
                                         for
                                         mechandise sales on sites such as YouTube.
@@ -84,7 +84,7 @@
                 <div class="md:w-2/5">
                     <div class="flex justify-center md:justify-start">
                         <span class="flex-shrink-0">
-                            <%= image_pack_tag "home/logo-onelogin.svg", class: "w-48 h-auto relative -top-2", alt: "company logo" %>
+                            <%= image_pack_tag "home/logo-onelogin.svg", class: "w-48 h-auto relative -top-2 dark:invert", alt: "company logo" %>
                         </span>
                         <div class="relative w-full ml-6 hidden md:block">
                             <span class="h-0.5 bg-grey-70 absolute inset-x-0 top-3 transform -translate-y-1/2"></span>
@@ -97,14 +97,14 @@
                             class="border-2 border-grey-40 rounded-full w-4 h-4 absolute left-8 top-1 bg-white hidden md:block"></span>
 
                         <div class="mt-1 flex">
-                            <i class='bx bxs-right-arrow text-primary hidden md:block'></i>
+                            <i class='bx bxs-right-arrow text-primary dark:text-primary-dark hidden md:block'></i>
                             <div class="md:pl-8 md:-mt-1">
-                                <span class="font-body font-bold text-grey-40 block">May 2013 - Aug
+                                <span class="font-body font-bold text-grey-40 dark:text-grey-dark-90 block">May 2013 - Aug
                                     2015</span>
-                                <span class="font-header font-bold text-xl text-primary uppercase block pt-2">
+                                <span class="font-header font-bold text-xl text-primary dark:text-primary-dark uppercase block pt-2">
                                     Software Engineer</span>
                                 <div class="pt-2">
-                                    <span class="font-body text-black block">
+                                    <span class="font-body text-black dark:text-white block">
                                         Led development on the NAPPS infrastructure that powers OneLogin's Native Mobile
                                         Application Single Sign-on platform.
                                     </span>
