--- a/app/views/home/_hero.html.erb
+++ b/app/views/home/_hero.html.erb
@@ -1,8 +1,8 @@
 <div class="bg-center bg-cover bg-no-repeat relative py-8"
     style="background-image: url(<%= asset_pack_path("media/images/home/bg-hero.jpg") %>);">
-    
+
     <div
-        class="bg-center bg-cover bg-no-repeat absolute inset-0 z-20 bg-gradient-to-r from-hero-gradient-from to-hero-gradient-to">
+        class="bg-center bg-cover bg-no-repeat absolute inset-0 z-20 bg-gradient-to-r from-hero-gradient-from dark:from-hero-gradient-dark-from to-hero-gradient-to dark:to-hero-gradient-dark-to">
     </div>
 
     <div class="container z-30 relative pt-20 sm:pt-56 lg:pt-64 pb-12 sm:pb-48 lg:pb-48">
