--- a/app/views/home/_work.html.erb
+++ b/app/views/home/_work.html.erb
@@ -117,7 +117,7 @@
         </div>
         <div class="flex justify-center mt-8">
             <a href="https://www.linkedin.com/in/benradler/" target="_blank"
-                class="bg-primary hover:bg-grey-20 font-header font-bold text-lg text-white px-8 py-3 flex justify-center mt-5 rounded items-center uppercase">
+                class="bg-primary hover:bg-grey-dark-60 font-header font-bold text-lg text-white px-8 py-3 flex justify-center mt-5 rounded items-center uppercase">
                 Let's Connect
                 <i class="bx bxl-linkedin-square text-3xl relative -right-2"></i>
             </a>
