--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
     <%= render partial: "work" %>
     <%= render partial: "games" %>
     <%= render partial: "videos" %>
-    <%= render partial: 'blog', locals: { posts: @posts } %>
+    <%= render partial: 'latest', locals: { posts: @posts } %>
     <%= render partial: "contact" %>
     <%= render partial: "newsletter" %>
 </div>
