--- a/app/views/home/_expertise.html.erb
+++ b/app/views/home/_expertise.html.erb
@@ -7,10 +7,10 @@
             <%= (Time.now.year - 2011).humanize.capitalize %> Years in Creative and Technical Disciplines</h3>
 
         <div class="grid grid-cols-1 sm:grid-cols-3 lg:grid-cols-3 gap-6 md:gap-10 pt-10 md:pt-12">
-            <div class="shadow px-8 py-12 hover:bg-primary dark:bg-primary dark:hover:bg-primary-dark group rounded">
+            <div class="shadow px-8 py-12 hover:bg-primary dark:bg-grey-dark-80 dark:hover:bg-grey-dark-60 group rounded">
                 <div class="text-center w-24 xl:w-28 h-24 xl:h-28 mx-auto">
                     <div class="hidden group-hover:block">
-                        <%= image_pack_tag "home/icon-software-development.svg", alt: "development icon", class: "invert dark:invert-0" %>
+                        <%= image_pack_tag "home/icon-software-development.svg", alt: "development icon", class: "invert dark:opacity-70" %>
                     </div>
                     <div class="block group-hover:hidden">
                         <%= image_pack_tag "home/icon-software-development.svg", alt: "development icon", class: "invert-0 dark:invert" %>
@@ -18,18 +18,18 @@
                 </div>
                 <div class="text-center">
                     <h3
-                        class="font-semibold text-lg lg:text-xl text-primary dark:text-grey-dark-10 primary-dark uppercase pt-8 group-hover:text-yellow">
+                        class="font-semibold text-lg lg:text-xl text-primary dark:text-gray-100 primary-dark uppercase pt-8 group-hover:text-yellow">
                         Software Engineering</h3>
-                    <p class="text-sm md:text-base text-grey dark:text-gray-100 pt-4 group-hover:text-white dark:group-hover:text-black">
+                    <p class="text-sm md:text-base text-grey dark:text-gray-100 pt-4 group-hover:text-white dark:group-hover:opacity-70">
                         Frontend and backend development using microservices.
                     </p>
                 </div>
             </div>
 
-            <div class="shadow px-8 py-12 hover:bg-primary dark:bg-primary dark:hover:bg-primary-dark group rounded">
+            <div class="shadow px-8 py-12 hover:bg-primary dark:bg-grey-dark-80 dark:hover:bg-grey-dark-60 group rounded">
                 <div class="text-center w-24 xl:w-28 h-24 xl:h-28 mx-auto">
                     <div class="hidden group-hover:block">
-                        <%= image_pack_tag "home/icon-app-development.svg", alt: "Mobile Application icon", class: "invert dark:invert-0 dark:brightness-50" %>
+                        <%= image_pack_tag "home/icon-app-development.svg", alt: "Mobile Application icon", class: "invert dark:opacity-70" %>
                     </div>
                     <div class="block group-hover:hidden">
                         <%= image_pack_tag "home/icon-app-development.svg", alt: "Mobile Application icon", class: "invert-0 dark:invert" %>
@@ -37,18 +37,18 @@
                 </div>
                 <div class="text-center">
                     <h3
-                        class="font-semibold text-lg lg:text-xl text-primary dark:text-grey-dark-10 primary-dark uppercase pt-8 group-hover:text-yellow">
+                        class="font-semibold text-lg lg:text-xl text-primary dark:text-gray-100 primary-dark uppercase pt-8 group-hover:text-yellow">
                         <span class="normal-case">iOS</span> Game Development</h3>
-                    <p class="text-sm md:text-base text-grey dark:text-gray-100 pt-4 group-hover:text-white dark:group-hover:text-black">
+                    <p class="text-sm md:text-base text-grey dark:text-gray-100 pt-4 group-hover:text-white dark:group-hover:opacity-70">
                         2D arcade-style games built with SpriteKit.
                     </p>
                 </div>
             </div>
 
-            <div class="shadow px-8 py-12 hover:bg-primary dark:bg-primary dark:hover:bg-primary-dark group rounded">
+            <div class="shadow px-8 py-12 hover:bg-primary dark:bg-grey-dark-80 dark:hover:bg-grey-dark-60 group rounded">
                 <div class="text-center w-24 xl:w-28 h-24 xl:h-28 mx-auto">
                     <div class="hidden group-hover:block">
-                        <%= image_pack_tag "home/icon-filmmaking.svg", alt: "film and photography icon", class: "invert dark:invert-0" %>
+                        <%= image_pack_tag "home/icon-filmmaking.svg", alt: "film and photography icon", class: "invert dark:opacity-70" %>
                     </div>
                     <div class="block group-hover:hidden">
                         <%= image_pack_tag "home/icon-filmmaking.svg", alt: "film and photography icon", class: "invert-0 dark:invert" %>
@@ -56,9 +56,9 @@
                 </div>
                 <div class="text-center">
                     <h3
-                        class="font-semibold text-lg lg:text-xl text-primary dark:text-grey-dark-10 primary-dark uppercase pt-8 group-hover:text-yellow">
+                        class="font-semibold text-lg lg:text-xl text-primary dark:text-gray-100 primary-dark uppercase pt-8 group-hover:text-yellow">
                         Film & Photography</h3>
-                    <p class="text-sm md:text-base text-grey dark:text-gray-100 pt-4 group-hover:text-white dark:group-hover:text-black">
+                    <p class="text-sm md:text-base text-grey dark:text-gray-100 pt-4 group-hover:text-white dark:group-hover:opacity-70">
                         Product photography, advertisement spots, and short films.
                     </p>
                 </div>
