name colors more sane

--- a/app/views/home/_expertise.html.erb
+++ b/app/views/home/_expertise.html.erb
@@ -1,13 +1,13 @@
-<div class="dark:bg-grey-dark-20" id="expertise">
+<div class="dark:bg-primary-20" id="expertise">
     <div class="container py-16 md:py-20">
         <h2
-            class="font-header font-semibold text-primary dark:text-primary-dark text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
+            class="font-header font-semibold text-primary dark:text-primary-500 text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
             Expertise</h2>
         <h3 class="font-header font-medium text-black dark:text-white text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
             <%= (Time.now.year - 2011).humanize.capitalize %> Years in Creative and Technical Disciplines</h3>
 
         <div class="grid grid-cols-1 sm:grid-cols-3 lg:grid-cols-3 gap-6 md:gap-10 pt-10 md:pt-12">
-            <div class="shadow px-8 py-12 hover:bg-primary dark:bg-grey-dark-80 dark:hover:bg-grey-dark-60 group rounded">
+            <div class="shadow px-8 py-12 hover:bg-primary dark:bg-primary-80 dark:hover:bg-primary-60 group rounded">
                 <div class="text-center w-24 xl:w-28 h-24 xl:h-28 mx-auto">
                     <div class="hidden group-hover:block">
                         <%= image_pack_tag "home/icon-software-development.svg", alt: "development icon", class: "invert dark:opacity-70" %>
@@ -18,7 +18,7 @@
                 </div>
                 <div class="text-center">
                     <h3
-                        class="font-semibold text-lg lg:text-xl text-primary dark:text-gray-100 primary-dark uppercase pt-8 group-hover:text-yellow">
+                        class="font-semibold text-lg lg:text-xl text-primary dark:text-gray-100 primary-500 uppercase pt-8 group-hover:text-yellow">
                         Software Engineering</h3>
                     <p class="text-sm md:text-base text-grey dark:text-gray-100 pt-4 group-hover:text-white dark:group-hover:opacity-70">
                         Frontend and backend development using microservices.
@@ -26,7 +26,7 @@
                 </div>
             </div>
 
-            <div class="shadow px-8 py-12 hover:bg-primary dark:bg-grey-dark-80 dark:hover:bg-grey-dark-60 group rounded">
+            <div class="shadow px-8 py-12 hover:bg-primary dark:bg-primary-80 dark:hover:bg-primary-60 group rounded">
                 <div class="text-center w-24 xl:w-28 h-24 xl:h-28 mx-auto">
                     <div class="hidden group-hover:block">
                         <%= image_pack_tag "home/icon-app-development.svg", alt: "Mobile Application icon", class: "invert dark:opacity-70" %>
@@ -37,7 +37,7 @@
                 </div>
                 <div class="text-center">
                     <h3
-                        class="font-semibold text-lg lg:text-xl text-primary dark:text-gray-100 primary-dark uppercase pt-8 group-hover:text-yellow">
+                        class="font-semibold text-lg lg:text-xl text-primary dark:text-gray-100 primary-500 uppercase pt-8 group-hover:text-yellow">
                         <span class="normal-case">iOS</span> Game Development</h3>
                     <p class="text-sm md:text-base text-grey dark:text-gray-100 pt-4 group-hover:text-white dark:group-hover:opacity-70">
                         2D arcade-style games built with SpriteKit.
@@ -45,7 +45,7 @@
                 </div>
             </div>
 
-            <div class="shadow px-8 py-12 hover:bg-primary dark:bg-grey-dark-80 dark:hover:bg-grey-dark-60 group rounded">
+            <div class="shadow px-8 py-12 hover:bg-primary dark:bg-primary-80 dark:hover:bg-primary-60 group rounded">
                 <div class="text-center w-24 xl:w-28 h-24 xl:h-28 mx-auto">
                     <div class="hidden group-hover:block">
                         <%= image_pack_tag "home/icon-filmmaking.svg", alt: "film and photography icon", class: "invert dark:opacity-70" %>
@@ -56,7 +56,7 @@
                 </div>
                 <div class="text-center">
                     <h3
-                        class="font-semibold text-lg lg:text-xl text-primary dark:text-gray-100 primary-dark uppercase pt-8 group-hover:text-yellow">
+                        class="font-semibold text-lg lg:text-xl text-primary dark:text-gray-100 primary-500 uppercase pt-8 group-hover:text-yellow">
                         Film & Photography</h3>
                     <p class="text-sm md:text-base text-grey dark:text-gray-100 pt-4 group-hover:text-white dark:group-hover:opacity-70">
                         Product photography, advertisement spots, and short films.
