--- a/app/views/home/_videos.html.erb
+++ b/app/views/home/_videos.html.erb
@@ -1,15 +1,15 @@
-<div class="bg-grey-50 dark:bg-grey-dark-40" id="videos">
+<div class="bg-grey-50 dark:bg-primary-40" id="videos">
     <div class="container py-16 md:py-20">
         <h2
-            class="font-header font-semibold text-primary dark:text-primary-dark text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
+            class="font-header font-semibold text-primary dark:text-primary-500 text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
             Videos</h2>
         <h3 class="font-header font-medium text-black dark:text-white text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
             Watch the Best Short Films From
-            <a href="https://youtube/com/benradler" target="_blank" class="text-primary dark:text-primary-dark">My YouTube Channel</a>
+            <a href="https://youtube/com/benradler" target="_blank" class="text-primary dark:text-primary-500">My YouTube Channel</a>
         </h3>
 
         <div class="grid grid-cols-1 sm:grid-cols-1 lg:grid-cols-3 gap-6 md:gap-10 pt-10 md:pt-12">
-            <div class="shadow pt-2 pr-2 pl-2 pb-6 group rounded bg-white dark:bg-grey-dark-80">
+            <div class="shadow pt-2 pr-2 pl-2 pb-6 group rounded bg-white dark:bg-primary-80">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/FHebqAXUJGo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <div class="text-center">
                     <h3
@@ -21,7 +21,7 @@
                 </div>
             </div>
 
-            <div class="shadow pt-2 pr-2 pl-2 pb-6 group rounded bg-white dark:bg-grey-dark-80">
+            <div class="shadow pt-2 pr-2 pl-2 pb-6 group rounded bg-white dark:bg-primary-80">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/AMzBQlTWPHU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <div class="text-center">
                     <h3
@@ -33,7 +33,7 @@
                 </div>
             </div>
 
-            <div class="shadow pt-2 pr-2 pl-2 pb-6 group rounded bg-white dark:bg-grey-dark-80">
+            <div class="shadow pt-2 pr-2 pl-2 pb-6 group rounded bg-white dark:bg-primary-80">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/Mdk78fR0ihw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <div class="text-center">
                     <h3
@@ -48,7 +48,7 @@
 
         <div class="flex justify-center mt-8">
             <a href="https://youtube.com/benradler" target="_blank"
-                class="bg-primary hover:bg-grey-dark-60 font-header font-bold text-lg text-white px-8 py-3 flex justify-center mt-5 rounded items-center uppercase">
+                class="bg-primary hover:bg-primary-60 font-header font-bold text-lg text-white px-8 py-3 flex justify-center mt-5 rounded items-center uppercase">
                 My YouTube Channel
                 <i class="bx bxl-youtube text-3xl relative -right-2"></i>
             </a>
