--- a/app/views/shared/_contact_me.html.erb
+++ b/app/views/shared/_contact_me.html.erb
@@ -20,7 +20,7 @@
   <%= f.text_area  :message, placeholder: 'message', class:"w-full font-body text-black px-4 py-3 border-grey-50 rounded mt-6 md:mt-8", cols: "30", rows: "10" %>
 
   <button
-    class="bg-primary hover:bg-grey-dark-60 px-8 py-3 flex justify-center mt-6 rounded items-center">
+    class="bg-primary hover:bg-primary-60 px-8 py-3 flex justify-center mt-6 rounded items-center">
     <%= f.submit("Send", class: 'font-header font-bold text-lg text-white uppercase hover:cursor-pointer') %>
     <i class='bx bx-chevron-right text-3xl relative -right-2 font-header font-bold text-lg text-white'></i>
   </button>
@@ -34,7 +34,7 @@
       <p class="font-body font-bold text-grey-40 dark:text-white lg:text-lg uppercase pl-2">
         LinkedIn</p>
     </div>
-    <p class="font-body font-bold text-primary dark:text-primary-dark lg:text-lg pt-2 text-left">
+    <p class="font-body font-bold text-primary dark:text-primary-500 lg:text-lg pt-2 text-left">
         <a href="https://www.linkedin.com/in/benradler/">linkedin.com/benradler</a>
     </p>
   </div>
@@ -45,7 +45,7 @@
       <p class="font-body font-bold text-grey-40 dark:text-white lg:text-lg uppercase pl-2">
         Email</p>
     </div>
-    <p class="font-body font-bold text-primary dark:text-primary-dark lg:text-lg pt-2 text-left">
+    <p class="font-body font-bold text-primary dark:text-primary-500 lg:text-lg pt-2 text-left">
       <a href="mailto:info@benradler.com">info@benradler.com</a>
     </p>
   </div>
@@ -56,7 +56,7 @@
       <p class="font-body font-bold text-grey-40 dark:text-white lg:text-lg uppercase pl-2">
         Location</p>
     </div>
-    <p class="font-body font-bold text-primary dark:text-primary-dark lg:text-lg pt-2 text-left">
+    <p class="font-body font-bold text-primary dark:text-primary-500 lg:text-lg pt-2 text-left">
         San Francisco Based, Remote Friendly
     </p>
   </div>
