--- a/app/views/home/_contact.html.erb
+++ b/app/views/home/_contact.html.erb
@@ -1,7 +1,7 @@
-<div class="dark:bg-grey-dark-40" id="contact">
+<div class="dark:bg-primary-40" id="contact">
     <div class="container py-16 md:py-20">
         <h2
-            class="font-header font-semibold text-primary dark:text-primary-dark text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
+            class="font-header font-semibold text-primary dark:text-primary-500 text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
             Contact Me</h2>
         <h4 class="font-header font-medium text-black dark:text-white text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
             Have Any Questions?</h4>
