--- a/app/views/home/_games.html.erb
+++ b/app/views/home/_games.html.erb
@@ -1,12 +1,12 @@
-<div class="dark:bg-grey-dark-20" id="games">
+<div class="dark:bg-primary-20" id="games">
     <div class="container py-16 md:py-20">
         <div class="w-full text-center lg:text-left">
-            <h2 class="font-header font-semibold text-primary dark:text-primary-dark text-4xl sm:text-5xl lg:text-6xl uppercase">
+            <h2 class="font-header font-semibold text-primary dark:text-primary-500 text-4xl sm:text-5xl lg:text-6xl uppercase">
                 Game Design</h2>
         </div>
         <div class="flex flex-col lg:flex-row items-center">
 
-            <div class="w-full md:w-4/5 lg:w-3/5 shadow dark:shadow-grey-dark-40 dark:bg-primary p-2 my-6 group rounded">
+            <div class="w-full md:w-4/5 lg:w-3/5 shadow dark:shadow-primary-40 dark:bg-primary p-2 my-6 group rounded">
                 <video autoplay loop muted playsinline>
                     <source src="<%= asset_pack_path("media/images/home/squarecrusher-hq.mp4") %>" type="video/mp4">
                     Sorry, your browser doesn't support embedded videos.
@@ -15,7 +15,7 @@
 
             <div class="w-full md:w-3/4 lg:w-2/5 pl-0 lg:pl-12 pt-10 lg:pt-0">
                 <h3 class="font-semibold text-2xl lg:text-4xl uppercase pt-0 flex justify-center lg:justify-start">
-                    <a href="https://apps.apple.com/us/app/squarecrusher/id1518515040" class="text-primary dark:text-primary-dark"
+                    <a href="https://apps.apple.com/us/app/squarecrusher/id1518515040" class="text-primary dark:text-primary-500"
                         target="_blank">
                         SquareCrusher!
                     </a>
@@ -23,10 +23,10 @@
 
                 <div class="my-5">
                     <div class="flex items-center justify-center lg:justify-start">
-                        <i class="bx bxl-apple text-5xl text-primary dark:text-primary-dark mr-5"></i>
+                        <i class="bx bxl-apple text-5xl text-primary dark:text-primary-500 mr-5"></i>
                         <h4 class="font-header font-normal text-black dark:text-white uppercase">
                             <%= "Built With " %>
-                            <span class="text-primary dark:text-primary-dark font-black">
+                            <span class="text-primary dark:text-primary-500 font-black">
                                 Swift & SpriteKit
                             </span>
                         </h4>
@@ -35,10 +35,10 @@
 
                 <div class="my-5">
                     <div class="flex items-center justify-center lg:justify-start">
-                        <i class="bx bx-game text-5xl text-primary dark:text-primary-dark mr-5 p0"></i>
+                        <i class="bx bx-game text-5xl text-primary dark:text-primary-500 mr-5 p0"></i>
                         <h4 class="font-header font-normal text-black dark:text-white uppercase">
                             <%= "Fast Paced " %>
-                            <span class="text-primary dark:text-primary-dark font-black">
+                            <span class="text-primary dark:text-primary-500 font-black">
                                 Action Game
                             </span>
                         </h4>
@@ -47,10 +47,10 @@
 
                 <div class="my-5">
                     <div class="flex items-center justify-center lg:justify-start">
-                        <i class="bx bx-volume-full text-5xl text-primary dark:text-primary-dark mr-5 p0"></i>
+                        <i class="bx bx-volume-full text-5xl text-primary dark:text-primary-500 mr-5 p0"></i>
                         <h4 class="font-header font-normal text-black dark:text-white uppercase">
                             <%= "Custom " %>
-                            <span class="text-primary dark:text-primary-dark font-black">
+                            <span class="text-primary dark:text-primary-500 font-black">
                                 Sound Effects
                             </span>
                         </h4>
@@ -59,10 +59,10 @@
 
                 <div class="my-5">
                     <div class="flex items-center justify-center lg:justify-start">
-                        <i class="bx bx-dollar-circle text-5xl text-primary dark:text-primary-dark mr-5 p0"></i>
+                        <i class="bx bx-dollar-circle text-5xl text-primary dark:text-primary-500 mr-5 p0"></i>
                         <h4 class="font-header font-normal text-black dark:text-white uppercase">
                             <%= "In Game " %>
-                            <span class="text-primary dark:text-primary-dark font-black">
+                            <span class="text-primary dark:text-primary-500 font-black">
                                 Economy
                             </span>
                         </h4>
@@ -71,10 +71,10 @@
 
                 <div class="my-5">
                     <div class="flex items-center justify-center lg:justify-start">
-                        <i class="bx bxs-star text-5xl text-primary dark:text-primary-dark mr-5 p0"></i>
+                        <i class="bx bxs-star text-5xl text-primary dark:text-primary-500 mr-5 p0"></i>
                         <h4 class="font-header font-normal text-black dark:text-white uppercase">
                             <%= "5-Star " %>
-                            <span class="text-primary dark:text-primary-dark font-black">
+                            <span class="text-primary dark:text-primary-500 font-black">
                                 Rating
                             </span>
                         </h4>
@@ -83,7 +83,7 @@
 
                 <div class="flex justify-center lg:justify-start">
                     <a href="https://apps.apple.com/us/app/squarecrusher/id1518515040" target="_blank"
-                        class="bg-primary dark:hover:bg-grey-dark-60 font-header font-bold text-lg text-white px-8 py-3 flex justify-center mt-5 rounded items-center uppercase">
+                        class="bg-primary dark:hover:bg-primary-60 font-header font-bold text-lg text-white px-8 py-3 flex justify-center mt-5 rounded items-center uppercase">
                         Download Now
                         <i class="bx bxs-cloud-download text-3xl relative -right-2"></i>
                     </a>
