--- a/app/views/home/_work.html.erb
+++ b/app/views/home/_work.html.erb
@@ -1,7 +1,7 @@
-<div class="bg-cover bg-no-repeat dark:bg-grey-dark-40 xs:bg-[center_top_1000rem] lg:bg-top pb-0 lg:pb-16 xl:px-16"
+<div class="bg-cover bg-no-repeat dark:bg-primary-40 xs:bg-[center_top_1000rem] lg:bg-top pb-0 lg:pb-16 xl:px-16"
     style="background-image:url(<%= asset_pack_path("media/images/home/experience-figure.svg") %>)" id="work">
-    <div class="bg-white dark:bg-grey-dark-40 w-5/6 md:w-11/12 2xl:w-full mx-auto py-16 lg:py-20 xl:py-24">
-        <h2 class="font-header font-semibold text-primary dark:text-primary-dark text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
+    <div class="bg-white dark:bg-primary-40 w-5/6 md:w-11/12 2xl:w-full mx-auto py-16 lg:py-20 xl:py-24">
+        <h2 class="font-header font-semibold text-primary dark:text-primary-500 text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
             Work Experience</h2>
         <h3 class="font-header font-medium text-black dark:text-white text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
             San Francisco Based Technology Companies</h3>
@@ -26,11 +26,11 @@
                             class="border-2 border-grey-40 rounded-full w-4 h-4 absolute left-8 top-1 bg-white hidden md:block"></span>
 
                         <div class="mt-1 flex">
-                            <i class='bx bxs-right-arrow text-primary dark:text-primary-dark hidden md:block'></i>
+                            <i class='bx bxs-right-arrow text-primary dark:text-primary-500 hidden md:block'></i>
                             <div class="md:pl-8 md:-mt-1">
-                                <span class="font-body font-bold text-grey-40 dark:text-grey-dark-90 block">
+                                <span class="font-body font-bold text-grey-40 dark:text-primary-90 block">
                                     Apr 2017 - <%= Time.now.strftime("%b %Y") %></span>
-                                <span class="font-header font-bold text-xl text-primary dark:text-primary-dark uppercase block pt-2">
+                                <span class="font-header font-bold text-xl text-primary dark:text-primary-500 uppercase block pt-2">
                                     Software Engineer</span>
                                 <div class="pt-2">
                                     <span class="font-body text-black dark:text-white block">
@@ -60,13 +60,13 @@
                             class="border-2 border-grey-40 rounded-full w-4 h-4 absolute left-8 top-1 bg-white hidden md:block"></span>
 
                         <div class="mt-1 flex">
-                            <i class='bx bxs-right-arrow text-primary dark:text-primary-dark hidden md:block'></i>
+                            <i class='bx bxs-right-arrow text-primary dark:text-primary-500 hidden md:block'></i>
                             <div class="md:pl-8 md:-mt-1">
-                                <span class="font-body font-bold text-grey-40 dark:text-grey-dark-90 block">
+                                <span class="font-body font-bold text-grey-40 dark:text-primary-90 block">
                                     Sep 2015 - Mar 2017
                                 </span>
                                 <span
-                                    class="font-header font-bold text-xl text-primary dark:text-primary-dark uppercase block pt-2">Engineering
+                                    class="font-header font-bold text-xl text-primary dark:text-primary-500 uppercase block pt-2">Engineering
                                     Manager</span>
                                 <div class="pt-2">
                                     <span class="font-body text-black dark:text-white block">
@@ -97,11 +97,11 @@
                             class="border-2 border-grey-40 rounded-full w-4 h-4 absolute left-8 top-1 bg-white hidden md:block"></span>
 
                         <div class="mt-1 flex">
-                            <i class='bx bxs-right-arrow text-primary dark:text-primary-dark hidden md:block'></i>
+                            <i class='bx bxs-right-arrow text-primary dark:text-primary-500 hidden md:block'></i>
                             <div class="md:pl-8 md:-mt-1">
-                                <span class="font-body font-bold text-grey-40 dark:text-grey-dark-90 block">May 2013 - Aug
+                                <span class="font-body font-bold text-grey-40 dark:text-primary-90 block">May 2013 - Aug
                                     2015</span>
-                                <span class="font-header font-bold text-xl text-primary dark:text-primary-dark uppercase block pt-2">
+                                <span class="font-header font-bold text-xl text-primary dark:text-primary-500 uppercase block pt-2">
                                     Software Engineer</span>
                                 <div class="pt-2">
                                     <span class="font-body text-black dark:text-white block">
@@ -117,7 +117,7 @@
         </div>
         <div class="flex justify-center mt-8">
             <a href="https://www.linkedin.com/in/benradler/" target="_blank"
-                class="bg-primary hover:bg-grey-dark-60 font-header font-bold text-lg text-white px-8 py-3 flex justify-center mt-5 rounded items-center uppercase">
+                class="bg-primary hover:bg-primary-60 font-header font-bold text-lg text-white px-8 py-3 flex justify-center mt-5 rounded items-center uppercase">
                 Let's Connect
                 <i class="bx bxl-linkedin-square text-3xl relative -right-2"></i>
             </a>
