--- a/app/views/home/_games.html.erb
+++ b/app/views/home/_games.html.erb
@@ -24,7 +24,7 @@
                 <div class="my-5">
                     <div class="flex items-center justify-center lg:justify-start">
                         <i class="bx bxl-apple text-5xl text-primary dark:text-primary-500 mr-5"></i>
-                        <h4 class="font-header font-normal text-black dark:text-white uppercase">
+                        <h4 class="font-header font-normal text-black dark:text-primary-1000 uppercase">
                             <%= "Built With " %>
                             <span class="text-primary dark:text-primary-500 font-black">
                                 Swift & SpriteKit
@@ -36,7 +36,7 @@
                 <div class="my-5">
                     <div class="flex items-center justify-center lg:justify-start">
                         <i class="bx bx-game text-5xl text-primary dark:text-primary-500 mr-5 p0"></i>
-                        <h4 class="font-header font-normal text-black dark:text-white uppercase">
+                        <h4 class="font-header font-normal text-black dark:text-primary-1000 uppercase">
                             <%= "Fast Paced " %>
                             <span class="text-primary dark:text-primary-500 font-black">
                                 Action Game
@@ -48,7 +48,7 @@
                 <div class="my-5">
                     <div class="flex items-center justify-center lg:justify-start">
                         <i class="bx bx-volume-full text-5xl text-primary dark:text-primary-500 mr-5 p0"></i>
-                        <h4 class="font-header font-normal text-black dark:text-white uppercase">
+                        <h4 class="font-header font-normal text-black dark:text-primary-1000 uppercase">
                             <%= "Custom " %>
                             <span class="text-primary dark:text-primary-500 font-black">
                                 Sound Effects
@@ -60,7 +60,7 @@
                 <div class="my-5">
                     <div class="flex items-center justify-center lg:justify-start">
                         <i class="bx bx-dollar-circle text-5xl text-primary dark:text-primary-500 mr-5 p0"></i>
-                        <h4 class="font-header font-normal text-black dark:text-white uppercase">
+                        <h4 class="font-header font-normal text-black dark:text-primary-1000 uppercase">
                             <%= "In Game " %>
                             <span class="text-primary dark:text-primary-500 font-black">
                                 Economy
@@ -72,7 +72,7 @@
                 <div class="my-5">
                     <div class="flex items-center justify-center lg:justify-start">
                         <i class="bx bxs-star text-5xl text-primary dark:text-primary-500 mr-5 p0"></i>
-                        <h4 class="font-header font-normal text-black dark:text-white uppercase">
+                        <h4 class="font-header font-normal text-black dark:text-primary-1000 uppercase">
                             <%= "5-Star " %>
                             <span class="text-primary dark:text-primary-500 font-black">
                                 Rating
