--- a/app/views/home/_videos.html.erb
+++ b/app/views/home/_videos.html.erb
@@ -3,7 +3,7 @@
         <h2
             class="font-header font-semibold text-primary dark:text-primary-500 text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
             Videos</h2>
-        <h3 class="font-header font-medium text-black dark:text-white text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
+        <h3 class="font-header font-medium text-black dark:text-primary-1000 text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
             Watch the Best Short Films From
             <a href="https://youtube/com/benradler" target="_blank" class="text-primary dark:text-primary-500">My YouTube Channel</a>
         </h3>
