--- a/app/views/home/_contact.html.erb
+++ b/app/views/home/_contact.html.erb
@@ -3,7 +3,7 @@
         <h2
             class="font-header font-semibold text-primary dark:text-primary-500 text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
             Contact Me</h2>
-        <h4 class="font-header font-medium text-black dark:text-white text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
+        <h4 class="font-header font-medium text-black dark:text-primary-1000 text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
             Have Any Questions?</h4>
         <div class="w-full sm:w-2/3 mx-auto pt-5 lg:pt-6 text-center">
             <p class="font-body text-grey-10 dark:text-gray-300">Please feel free to reach out. No question is too simple, no job is too complex.</p>
