--- a/app/views/home/_expertise.html.erb
+++ b/app/views/home/_expertise.html.erb
@@ -3,7 +3,7 @@
         <h2
             class="font-header font-semibold text-primary dark:text-primary-500 text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
             Expertise</h2>
-        <h3 class="font-header font-medium text-black dark:text-white text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
+        <h3 class="font-header font-medium text-black dark:text-primary-1000 text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
             <%= (Time.now.year - 2011).humanize.capitalize %> Years in Creative and Technical Disciplines</h3>
 
         <div class="grid grid-cols-1 sm:grid-cols-3 lg:grid-cols-3 gap-6 md:gap-10 pt-10 md:pt-12">
