--- a/app/views/home/_work.html.erb
+++ b/app/views/home/_work.html.erb
@@ -3,7 +3,7 @@
     <div class="bg-white dark:bg-primary-40 w-5/6 md:w-11/12 2xl:w-full mx-auto py-16 lg:py-20 xl:py-24">
         <h2 class="font-header font-semibold text-primary dark:text-primary-500 text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
             Work Experience</h2>
-        <h3 class="font-header font-medium text-black dark:text-white text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
+        <h3 class="font-header font-medium text-black dark:text-primary-1000 text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
             San Francisco Based Technology Companies</h3>
 
         <div class="w-full lg:w-2/3 mx-auto flex flex-col mt-12 relative">
@@ -28,12 +28,12 @@
                         <div class="mt-1 flex">
                             <i class='bx bxs-right-arrow text-primary dark:text-primary-500 hidden md:block'></i>
                             <div class="md:pl-8 md:-mt-1">
-                                <span class="font-body font-bold text-grey-40 dark:text-primary-90 block">
+                                <span class="font-body font-bold text-grey-40 dark:text-primary-300 block">
                                     Apr 2017 - <%= Time.now.strftime("%b %Y") %></span>
                                 <span class="font-header font-bold text-xl text-primary dark:text-primary-500 uppercase block pt-2">
                                     Software Engineer</span>
                                 <div class="pt-2">
-                                    <span class="font-body text-black dark:text-white block">
+                                    <span class="font-body text-black dark:text-primary-1000 block">
                                         Built and maintained Simulated Rides and Acceptance Testing platforms, ensuring
                                         Lyft can handle peak scale for the busiest moments.
                                     </span>
@@ -62,14 +62,14 @@
                         <div class="mt-1 flex">
                             <i class='bx bxs-right-arrow text-primary dark:text-primary-500 hidden md:block'></i>
                             <div class="md:pl-8 md:-mt-1">
-                                <span class="font-body font-bold text-grey-40 dark:text-primary-90 block">
+                                <span class="font-body font-bold text-grey-40 dark:text-primary-300 block">
                                     Sep 2015 - Mar 2017
                                 </span>
                                 <span
                                     class="font-header font-bold text-xl text-primary dark:text-primary-500 uppercase block pt-2">Engineering
                                     Manager</span>
                                 <div class="pt-2">
-                                    <span class="font-body text-black dark:text-white block">
+                                    <span class="font-body text-black dark:text-primary-1000 block">
                                         Architect of Teespring Storefronts product, widely used by online influencers
                                         for
                                         mechandise sales on sites such as YouTube.
@@ -99,12 +99,12 @@
                         <div class="mt-1 flex">
                             <i class='bx bxs-right-arrow text-primary dark:text-primary-500 hidden md:block'></i>
                             <div class="md:pl-8 md:-mt-1">
-                                <span class="font-body font-bold text-grey-40 dark:text-primary-90 block">May 2013 - Aug
+                                <span class="font-body font-bold text-grey-40 dark:text-primary-300 block">May 2013 - Aug
                                     2015</span>
                                 <span class="font-header font-bold text-xl text-primary dark:text-primary-500 uppercase block pt-2">
                                     Software Engineer</span>
                                 <div class="pt-2">
-                                    <span class="font-body text-black dark:text-white block">
+                                    <span class="font-body text-black dark:text-primary-1000 block">
                                         Led development on the NAPPS infrastructure that powers OneLogin's Native Mobile
                                         Application Single Sign-on platform.
                                     </span>
