--- a/app/views/shared/_contact_me.html.erb
+++ b/app/views/shared/_contact_me.html.erb
@@ -30,8 +30,8 @@
 <div class="flex flex-col lg:flex-row pt-16">
   <div class="w-full lg:w-1/3 border-l-2 border-t-2 border-r-2 border-b-2 border-grey-60 px-6 py-6 sm:py-8 dark:bg-primary-60 dark:border-primary-500">
     <div class="flex items-center">
-      <i class='bx bxl-linkedin text-grey-40 dark:text-white text-2xl'></i>
-      <p class="font-body font-bold text-grey-40 dark:text-white lg:text-lg uppercase pl-2">
+      <i class='bx bxl-linkedin text-grey-40 dark:text-primary-1000 text-2xl'></i>
+      <p class="font-body font-bold text-grey-40 dark:text-primary-1000 lg:text-lg uppercase pl-2">
         LinkedIn</p>
     </div>
     <p class="font-body font-bold text-primary dark:text-primary-500 lg:text-lg pt-2 text-left">
@@ -41,8 +41,8 @@
   <div
     class="w-full lg:w-1/3 border-l-2 lg:border-l-0 border-t-0 lg:border-t-2 border-r-2 border-b-2 border-grey-60 px-6 py-6 sm:py-8 dark:bg-primary-60 dark:border-primary-500">
     <div class="flex items-center">
-      <i class='bx bx-envelope text-grey-40 dark:text-white text-2xl'></i>
-      <p class="font-body font-bold text-grey-40 dark:text-white lg:text-lg uppercase pl-2">
+      <i class='bx bx-envelope text-grey-40 dark:text-primary-1000 text-2xl'></i>
+      <p class="font-body font-bold text-grey-40 dark:text-primary-1000 lg:text-lg uppercase pl-2">
         Email</p>
     </div>
     <p class="font-body font-bold text-primary dark:text-primary-500 lg:text-lg pt-2 text-left">
@@ -52,8 +52,8 @@
   <div
     class="w-full lg:w-1/3 border-l-2 lg:border-l-0 border-t-0 lg:border-t-2 border-r-2 border-b-2 border-grey-60 px-6 py-6 sm:py-8 dark:bg-primary-60 dark:border-primary-500">
     <div class="flex items-center">
-      <i class='bx bx-map text-grey-40 dark:text-white text-2xl'></i>
-      <p class="font-body font-bold text-grey-40 dark:text-white lg:text-lg uppercase pl-2">
+      <i class='bx bx-map text-grey-40 dark:text-primary-1000 text-2xl'></i>
+      <p class="font-body font-bold text-grey-40 dark:text-primary-1000 lg:text-lg uppercase pl-2">
         Location</p>
     </div>
     <p class="font-body font-bold text-primary dark:text-primary-500 lg:text-lg pt-2 text-left">
